--- a/client/uni/src/components/UserCardGrid/UserCardGrid.css
+++ b/client/uni/src/components/UserCardGrid/UserCardGrid.css
@@ -2,9 +2,9 @@
     display: grid;
     grid-template-columns: 30% 30% 30%;
     justify-content: center;
-    width: 99vw;
     align-items: start;
     padding:5px;
     grid-auto-rows: minmax(auto, max-content);
+    direction: rtl;
 
 }
